# xmpp-rs

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  ChangeLog  LICENSE  README.md  doap.xml
examples/: articles.rs  client.rs  component.rs  contact_addr.rs  download_avatars.rs  echo_bot.rs  echo_component.rs  generate-caps.rs  hello_bot.rs
icu/: Cargo.toml  build.rs
icu/src/: bindings.c  bindings.rs  error.rs  idna2008.rs  lib.rs  spoof.rs  stringprep.rs
interned-minidom/: Cargo.toml
interned-minidom/src/: lib.rs
jid/: CHANGELOG.md  Cargo.toml  README.md
jid-rs/: CHANGELOG.md  Cargo.toml  README.md
jid-rs/src/: lib.rs
jid/src/: lib.rs
jingle/: Cargo.toml
jingle/examples/: accept_call.rs
jingle/src/: jingle_to_sdp.rs  lib.rs  sdp_to_jingle.rs
jingle/tests/: conversations-audio-video.sdp  conversations-audio-video.xml  conversations-audio.sdp  conversations-audio.xml  conversations-ice-candidate.jsep  conversations-ice-candidate.xml
minidom/: CHANGELOG.md  Cargo.toml  README.md
minidom-rs/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
minidom-rs/examples/: articles.rs
minidom-rs/src/: convert.rs  element.rs  error.rs  lib.rs  namespace_set.rs  node.rs  prefixes.rs  tests.rs
minidom/src/: element.rs  lib.rs  prefixes.rs
mix-component/: Cargo.toml
mix-component/examples/: mix-component.rs
mix-component/src/: error.rs  lib.rs
parsers/: Cargo.toml  doap.xml
parsers/src/: bookmarks2.rs  caps.rs  data_forms.rs  date.rs  ecaps2.rs  extdisco.rs  http_upload.rs  jingle_dtls_srtp.rs  jingle_ice_udp.rs  jingle_raw_udp.rs  jingle_rtp_hdrext.rs  jingle_ssma.rs  lib.rs  mix.rs  ns.rs  presence.rs  xhtml.rs
parsers/src/pubsub/: event.rs  owner.rs  pubsub.rs
src/: attention.rs  attribute.rs  avatar.rs  bind.rs  blocking.rs  bob.rs  body.rs  bookmarks.rs  caps.rs  carbons.rs  cert_management.rs  chatstates.rs  client.rs  compare_elements.rs  component.rs  connection.rs  convert.rs  csi.rs  data_forms.rs  date.rs  delay.rs  disco.rs  ecaps2.rs  element.rs  eme.rs  error.rs  event.rs  forwarding.rs  happy_eyeballs.rs  hashes.rs  helpers.rs  ibb.rs  ibr.rs  idle.rs  iq.rs  jid.rs  jid_prep.rs  jingle.rs  jingle_dtls_srtp.rs  jingle_ft.rs  (+46 more)
src/client/: auth.rs  bind.rs  mod.rs
src/component/: auth.rs  mod.rs
src/components/: mod.rs  sasl_error.rs  stanza_error.rs
src/muc/: mod.rs  muc.rs  user.rs
src/plugins/: caps.rs  disco.rs  ibb.rs  messaging.rs  mod.rs  muc.rs  ping.rs  presence.rs  roster.rs  stanza.rs  stanza_debug.rs  unhandled_iq.rs
src/pubsub/: event.rs  mod.rs  pubsub.rs
src/sasl/: mod.rs
src/sasl/mechanisms/: anonymous.rs  mod.rs  plain.rs  scram.rs
src/util/: error.rs  helpers.rs  macros.rs
tokio-xmpp/: Cargo.toml  build.rs
tokio-xmpp/examples/: contact_addr.rs  download_avatars.rs  echo_bot.rs  echo_component.rs  send_message.rs
tokio-xmpp/src/: error.rs  event.rs  happy_eyeballs.rs  lib.rs  starttls.rs  stream_features.rs  stream_start.rs  xmpp_codec.rs  xmpp_stream.rs
tokio-xmpp/src/client/: async_client.rs  auth.rs  bind.rs  mod.rs  oneshot_client.rs  simple_client.rs
tokio-xmpp/src/component/: auth.rs  mod.rs
xmpp/: Cargo.toml  ChangeLog  README.md
xmpp-parsers/: .gitlab-ci.yml  Cargo.toml  ChangeLog  doap.xml
xmpp-parsers/examples/: generate-caps.rs
xmpp-parsers/src/: bind.rs  blocking.rs  bob.rs  bookmarks.rs  bookmarks2.rs  caps.rs  carbons.rs  cert_management.rs  chatstates.rs  csi.rs  data_forms.rs  date.rs  delay.rs  disco.rs  ecaps2.rs  forwarding.rs  hashes.rs  ibb.rs  ibr.rs  idle.rs  iq.rs  jid_prep.rs  jingle.rs  jingle_dtls_srtp.rs  jingle_ft.rs  jingle_grouping.rs  jingle_ibb.rs  jingle_ice_udp.rs  jingle_message.rs  jingle_rtcp_fb.rs  jingle_rtp.rs  jingle_s5b.rs  jingle_ssma.rs  lib.rs  mam.rs  media_element.rs  message.rs  mix.rs  muc_invite.rs  ns.rs  (+13 more)
xmpp-parsers/src/muc/: muc.rs  user.rs
xmpp-parsers/src/pubsub/: event.rs  mod.rs  owner.rs  pubsub.rs
xmpp-parsers/src/util/: compare_elements.rs  helpers.rs  macros.rs  mod.rs
xmpp-rs/: Cargo.toml  ChangeLog  README.md
xmpp-rs/examples/: hello_bot.rs
xmpp-rs/src/: lib.rs
xmpp-rs/src/pubsub/: avatar.rs  mod.rs
xmpp/examples/: hello_bot.rs
xmpp/src/: lib.rs
xmpp/src/pubsub/: avatar.rs
