[workspace]
members = [  # alphabetically sorted
  "jid",
  "jingle",
  "minidom",
  "tokio-xmpp",
  "xmpp-parsers",
  "xmpp",
]

[patch.crates-io]
jid = { path = "jid" }
jingle = { path = "jingle" }
minidom = { path = "minidom" }
tokio-xmpp = { path = "tokio-xmpp" }
xmpp-parsers = { path = "xmpp-parsers" }
xmpp = { path = "xmpp" }
