[workspace]
members = [  # alphabetically sorted
  "jid-rs",
  "minidom-rs",
  "tokio-xmpp",
  "xmpp-parsers",
  "xmpp-rs",
  "interned-minidom",
]

[patch.crates-io]
jid = { path = "jid-rs" }
minidom = { path = "minidom-rs" }
tokio-xmpp = { path = "tokio-xmpp" }
xmpp-parsers = { path = "xmpp-parsers" }
xmpp = { path = "xmpp-rs" }
interned-minidom = { path = "interned-minidom" }
