[package]
name = "jid"
version = "0.9.2"
authors = [
  "lumi <lumi@pew.im>",
  "Emmanuel Gil Peyrot <linkmauve@linkmauve.fr>",
  "Maxime “pep” Buquet <pep@bouah.net>",
]
description = "A crate which provides a Jid struct for Jabber IDs."
homepage = "https://gitlab.com/xmpp-rs/xmpp-rs"
repository = "https://gitlab.com/xmpp-rs/xmpp-rs"
documentation = "https://docs.rs/jid"
readme = "README.md"
keywords = ["xmpp", "jid"]
license = "MPL-2.0"
edition = "2018"

[badges]
gitlab = { repository = "xmpp-rs/xmpp-rs" }

[dependencies]
minidom = { version = "0.13", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
