[package]
name = "jingle"
version = "0.1.0"
authors = ["Emmanuel Gil Peyrot <linkmauve@linkmauve.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
log = "0.4"
xmpp-parsers = "*"

[dev-dependencies]
gst = { package = "gstreamer", version = "0.16" }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.16" }
anyhow = "1.0.34"
futures = "0.3.8"
xmpp = "*"
tokio = "*"
env_logger = "*"
