[package]
name = "minidom"
version = "0.14.0"
authors = [
  "lumi <lumi@pew.im>",
  "Emmanuel Gil Peyrot <linkmauve@linkmauve.fr>",
  "Bastien Orivel <eijebong+minidom@bananium.fr>",
  "Astro <astro@spaceboyz.net>",
  "Maxime “pep” Buquet <pep@bouah.net>",
]
description = "A small, simple DOM implementation on top of quick-xml, targeting the subset of XML useful for XMPP"
homepage = "https://gitlab.com/xmpp-rs/xmpp-rs"
repository = "https://gitlab.com/xmpp-rs/xmpp-rs"
documentation = "https://docs.rs/minidom"
readme = "README.md"
keywords = ["xml", "xmpp"]
license = "MPL-2.0"
edition = "2018"

[badges]
gitlab = { repository = "xmpp-rs/xmpp-rs" }

[dependencies]
quick-xml = "0.22.0"
