[package]
name = "tokio-xmpp"
version = "3.0.0"
authors = ["Astro <astro@spaceboyz.net>", "Emmanuel Gil Peyrot <linkmauve@linkmauve.fr>", "pep <pep+code@bouah.net>", "O01eg <o01eg@yandex.ru>", "SonnyX <randy@vonderweide.nl>", "Paul Fariello <paul@fariello.eu>"]
description = "Asynchronous XMPP for Rust with tokio"
license = "MPL-2.0"
homepage = "https://gitlab.com/xmpp-rs/xmpp-rs"
repository = "https://gitlab.com/xmpp-rs/xmpp-rs"
documentation = "https://docs.rs/tokio-xmpp"
categories = ["asynchronous", "network-programming"]
keywords = ["xmpp", "tokio"]
edition = "2018"

[dependencies]
bytes = "1"
futures = "0.3"
idna = "0.2"
log = "0.4"
native-tls = "0.2"
sasl = "0.5"
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = { version = "0.1", features = [] }
tokio-tls = { package = "tokio-native-tls", version = "0.3" }
trust-dns-resolver = "0.20"
trust-dns-proto = "0.20"
xml5ever = "0.16"
xmpp-parsers = "0.18"

[build-dependencies]
rustc_version = "0.3"

[features]
serde = ["xmpp-parsers/serde"]
