[package]
name = "xmpp"
version = "0.3.0"
authors = [
  "Emmanuel Gil Peyrot <linkmauve@linkmauve.fr>",
  "Maxime “pep” Buquet <pep@bouah.net>",
]
description = "High-level XMPP library"
homepage = "https://gitlab.com/xmpp-rs/xmpp-rs"
repository = "https://gitlab.com/xmpp-rs/xmpp-rs"
keywords = ["xmpp", "jabber", "chat", "messaging", "bot"]
categories = ["network-programming"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
tokio-xmpp = "1.0.1"
xmpp-parsers = "0.16"
futures = "0.1"
tokio = "0.1"
log = "0.4"

[features]
default = ["avatars"]
avatars = []
